// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`r-avatar.vue should render Wrapper and match snapshot 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main fs-block">
    <div class="r-avatar-initials r-avatar-initials-accent"><span>RB</span></div>
    <!---->
    <!---->
  </div>
  <div class="r-avatar-info">
    <!----> Avatar component</div>
</div>
`;

exports[`r-avatar.vue should render icon 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main fs-block">
    <!---->
    <div class="r-avatar-icon"><svg class="r-icon r-icon-20">
        <use xlink:href="#icon-heart" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
      </svg></div>
    <!---->
  </div>
  <div class="r-avatar-info">
    <!---->
  </div>
</div>
`;

exports[`r-avatar.vue should render image 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main fs-block">
    <!---->
    <!---->
    <div class="r-avatar-image">
      <figure role="img" class="r-component r-img" style="min-height: 0px; min-width: 0px;"><img src="https://www.meme-arsenal.com/memes/86b1de6ff6981be012d40bf26c6992ab.jpg" alt="Recomponents image"></figure>
    </div>
  </div>
  <div class="r-avatar-info">
    <!---->
  </div>
</div>
`;

exports[`r-avatar.vue should render via SSR and match snapshot 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main">
    <div class="r-avatar-initials r-avatar-initials-yellow"><span>VP</span></div>
    <!---->
    <!---->
  </div>
  <div class="r-avatar-info">
    <!----> Avatar component</div>
</div>
`;

exports[`r-avatar.vue should trigger validation warning 1`] = `
<div class="r-avatar r-avatar-description">
  <div class="r-avatar-main fs-block">
    <div class="r-avatar-initials r-avatar-initials-green"><span>Rebilly</span></div>
    <!---->
    <!---->
  </div>
  <div class="r-avatar-info">
    <!---->
  </div>
</div>
`;
